@@ -1,5 +1,3 @@
-local icon_utils = require("structures.icon-utils")
-
 local Immunities = {
     {buffer_capacity ="1TJ", input_flow_limit = "150GW", energy_consumption = "125GW", order = "jaa[belt-immunity]-aa[armour-replacer]"},
     {buffer_capacity ="1kJ", input_flow_limit =   "1kW", energy_consumption =    "1W", order = "jbb[belt-immunity]-ab[armour-replacer]"},
@@ -31,14 +29,6 @@ for tier, immunity in pairs(Immunities) do
             width = 64,
             height = 64,
             priority = "medium",
-            hr_version =
-            {
-                filename = "__base__/graphics/equipment/hr-belt-immunity-equipment.png",
-                width = 64,
-                height = 64,
-                priority = "medium",
-                scale = 0.5
-            }
         },
         shape = {
             width = 1,
