@@ -3,6 +3,7 @@ Version: 0.3.2
 Date: 24.10.2024
   Features:
     - Deeper Compatibility with S-A.
+    - Factoriopedia-simulations.
   Graphics:
     - Broken graphics.
     - Removed outdated graphics code.
